force-app/main/default/objects/AppointmentSlot__c/AppointmentSlot__c.object-meta.xml
<CustomObject>
    <description>The available time slots for appointments with any healthcare professional. It allows patients to select from available times for appointments with doctors, nurses, therapists, or other healthcare providers.</description>
    <label>Appointment Slot</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Appointment Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>