force-app/main/default/objects/AppointmentSlot__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <description>The day and time when the Appointment would take place.</description>
    <label>Appointment Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>