force-app/main/default/objects/AppointmentSlot__c/fields/HealthProfessional__c.field-meta.xml
<CustomField>
    <fullName>HealthProfessional__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Healthcare Professional</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointment Slots</relationshipLabel>
    <relationshipName>AppointmentSlots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>