force-app/main/default/objects/AppointmentSlot__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>A Medical Specialty is a branch of medicine that focuses on a specific area or system of the body, or a particular patient population. Practitioners of a specialty undergo specialized training, education, and certification to provide advanced care and expertise in their area of specialization.</description>
    <inlineHelpText>Select the doctor&apos;s medical specialty from the list. This indicates their advanced training and expertise in a specific area of medicine, ensuring the patient receives appropriate care.</inlineHelpText>
    <label>Specialty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MedicalSpecialties</valueSetName>
    </valueSet>
</CustomField>